--- a/123d.html
+++ b/123d.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1289.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x12819.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1p" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1p" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -152,7 +152,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-56" style="background-color: rgb(65, 65, 65); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container article" id="header3-56" style="background-color: rgb(51, 51, 51); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -185,7 +185,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="tCZkv/FbFz4rr3qvup2lv3uwki0qroiiqZhFh26eFOjCKPhAXHH4JdE5dWnIO2oZVGsUgF52o0r8BDN8Ycu/349FexjT1+wjT6DpeZE8BXIl9meI3nuWEByVJdnmxOBC" data-form-email="true">
+                    <input type="hidden" value="7pk2ZM+GQkl71uWrsPeju7nnRuwleCOMQV5rT9f54fozaHL1xzCtrWTxi28UVk5mMyYg+B1aRUeEVJzOEXXBk9FqEIdt/VUfeNZWG+si/kOaIXFHfjYs/9DcOU8mzbWU" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
