--- a/dreamweaver.html
+++ b/dreamweaver.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1289.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x12819.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1s" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1s" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -212,7 +212,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-59" style="background-color: rgb(65, 65, 65); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container article" id="header3-59" style="background-color: rgb(51, 51, 51); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -245,7 +245,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ODuhOMUg8lxd03M9xm8AKuJ2AbcwBasRiai7UN/OLp2q2C6cTUQJSjogFd1VyQO8rNoVr03Zg+hp5uWvGzKOU2NJFVBXRbFsRpg9bqSiorGpwQr2KHRr7RGUkb0LMKiR" data-form-email="true">
+                    <input type="hidden" value="MZq5CYFzkYRb3dGia/NGH01Cm0up70+Y5Vcg5lhJ6ZyKJeNjdvpFTJwY22m/ljrMwV72SE/Moej4lRDMQBwLDl2Vw/3CwYzD9n+K4Xmvu5FqAnaEg3vz6aMKkL2HHzkB" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
