--- a/photoshop.html
+++ b/photoshop.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1289.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x12819.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -456,9 +456,9 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item">
-                            <img alt="" src="assets/images/buster3-website-2000x200010.jpg">
+                            <img alt="" src="assets/images/buster3-website-2000x200020.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/buster-4-website-2000x200011.jpg">
+                            <img alt="" src="assets/images/buster-4-website-2000x200021.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/rainbow-connection-website-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -476,7 +476,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/julian-guas-perspective-imagery-website-2000x2000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x200012.jpg">
+                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x200022.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/bengal-tiger-website-1-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -548,7 +548,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-53" style="background-color: rgb(65, 65, 65); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container article" id="header3-53" style="background-color: rgb(51, 51, 51); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -581,7 +581,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="gSXuJUD4K4IeHYvpFGkFHHUzDUmaxZ42zBNbht8hQdmqHgpfO5uM2tLDpRdzaU9ojpLXIJEBlAavtwp4czP9cOjibbSOh/6ALS6UVrOc/z9AOOxregwrtZul52x3/bdG" data-form-email="true">
+                    <input type="hidden" value="psKP0lUe5wFaOXphy4URLGoAnlENO8FcBrYm3Kqrb11iftCWIn9qIvNt4lia0IlDCXtI5n0wHwZuV+W/m6Q9GNXkHx6bpNPmP8eeYbMdQPVK0e1Q6AvNO5fYnOQDhUYu" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
