--- a/word.html
+++ b/word.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1289.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x12819.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-22" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-22" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -90,7 +90,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-49" style="background-color: rgb(65, 65, 65); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container article" id="header3-49" style="background-color: rgb(51, 51, 51); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -123,7 +123,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="MPvg32MFMgEs491ly0o/wjQTasGy+T6tIhG9LnH3BosrK/GeiQb4cLVG3cQYzmH1QeeQNRGXmeDU+cldYjDlRuBnlm3SUsNJIXGesDTKGZt9HRX353W/VJa+tL5XJqOq" data-form-email="true">
+                    <input type="hidden" value="YuredWdRcbJAI8cMxhd6Y28dwuXQlkHvOBv+flMPMd+hfDggoUBkZKx3jVuIYtfRxIrT7a/oFAaIZCZ2KZPiek9U5xDpbzGDJnxETwKKtftmTbMvVaT0UEs9i05MBvA0" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
