--- a/123d.html
+++ b/123d.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1285.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128140.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1p" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1p" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -185,7 +185,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="oyiloQn481Jz6oT8tVyX6vPmpjTbn+GYM9XMB2NvVvkVipiBWomIPr1tHbASK8VOBjWJmaQ+XNLZdLIVyBOstLbkQ/EW3ABZk0xiL7oVOb9h4ke7wbf1MA3y50W0D/pF" data-form-email="true">
+                    <input type="hidden" value="WH2aQtYp+trF3e8oWzLEZMTLvsfcDyFviefDQvac8rI8nRpCPluVn+hLRYWUuOca+Rzs1TKO49zpc8tex18eCJlJ5HpnmxAjsEFdLyu88f8FEQmkoU6VCkFEzOAsuT6Z" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
