--- a/biography.html
+++ b/biography.html
@@ -34,7 +34,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1285.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128140.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3v" style="background-color: rgb(193, 193, 193); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3v" style="background-color: rgb(193, 193, 193); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -186,7 +186,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for subscribing</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="GRJBcUFmlMS80U3Q8kaHFn+SIwzZWH2s3fx5upI1Bj3JStBpUpmCFreSGFM6c3F+kIdaDJuGa4W5/s90rc4gIF5/qXw3r62PoIEPv+XmgOO6/c1T+CagIY13LKewLXcM" data-form-email="true">
+                        <input type="hidden" value="3RLksofzJDLEnge3rPqZBBQtQJJa4E2TTDw6lFbQMUrWvNjzyWIRLKL3F3GaWDTuSL5vL3ruNenWyXpURVJ9sjnKNioGpQPjKW86mEluJND3dSo1fhcqqraV0ONZzxxJ" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-5a-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-black">SUBSCRIBE</button></span>
@@ -220,7 +220,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Af6UMUxqAKk6u8nObLMyA+jm6rMY3ZLp5ufdJOQPNuVPqeYwIICtT2wK+HlR8vi4W1U6JPOW8NUPPHlTZxi/8+Z1lPxGj4LvsJA4ybSV1cMPApvbQodxz87h0NlvVZF3" data-form-email="true">
+                    <input type="hidden" value="FB98/0oSSGdKi75V2WkXe91fp5sKSQSG/kDiASnTqQUqKdAEZDhMvpZtVWtsFYDcv0t0xySg0p6itGTsURVqMHWnQ8EeMcUybdRaVewdXoV5KHGlFTweOJ2kvK35Fqn9" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2p-name">
