--- a/dreamweaver.html
+++ b/dreamweaver.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1285.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128140.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1s" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1s" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -245,7 +245,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="D+KjXjXX+4vHQOo5KDNGzvwvu3B2G2dI/6NEUTyZH65ew79YWS6Sl+6wCwzp+WbPyfZyNaWB50/tvESOvqtwyqOihw+js3Y100j6t5v6QaMCXs1TXlolUNxLA/047Rjf" data-form-email="true">
+                    <input type="hidden" value="TfYYJBJOsWET7TCpnceWksrZ4J7oJXAJ626pum6nJwLahL1CT4g+ITypE+826YZUXZBElmigRNhsbg78Jmu4tQTkaQpne5JshqCczWyi6KmgBucLqyQB7hMca0PxEnq6" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
