--- a/premiere.html
+++ b/premiere.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1285.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128140.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -245,7 +245,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="FGmXTPIsXbE2qDE7Xsg2Qizg7Ids6aFok6uWqmcqXQQVuxdN8yqMVMBluG5bLGn+278ol2KTeI+d/840LqNqWhkgmPWZe45t2afNjrd1x9pe9CqUK9IpcZx16hMH9ZV4" data-form-email="true">
+                    <input type="hidden" value="52NX82leeY5AFLI/9id4LQ01oDQJI1OJXqBR6BMpLOlsoSp6mZxH0JG7Ql24ZsBL0oUTWUEF/fDAYXMX9J5KfMn6vtaRLBc1UisMuY1v3LMzu9DMu8Vo3aGvHlAagOVU" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
