--- a/reference.html
+++ b/reference.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1285.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128140.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Generator</a></section><section class="mbr-section mbr-after-navbar" id="testimonials1-17" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="testimonials1-17" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -150,7 +150,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="EhdrKf+5COQhcghiu8bwu2+d4J8rzHhiYsyofqLunUyPVW71WS+E/kuce2kZt6O3P0mTt4xDtXxagp48lDwwpTL/RnhdURRpZbatf6X/0MOih10qr412LUUJf+A+3ljD" data-form-email="true">
+                    <input type="hidden" value="mGdaeQM60rcbfBw5SgGbUO9RfKk2Ac7J0GQNTj3CjkSLxApKvvp1igPze9deujIndN1Da9Mn5ZU7Fd1bhDewxw4PyIbnfTAdOs5zH7glOvZkZ/6VCPEkMGyBjy1GHp7k" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
