--- a/word.html
+++ b/word.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1285.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128140.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-22" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-22" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -123,7 +123,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="CpuC6DBw8T2l7Bn6SYwFCuMWrUhyGdqKX4JqVCjI/5faqPYcK75PuyNzSrS4qhGCzILzZIAAaz0Fsf4uaWkaWa25oEXtJqKv3nk5zNVnoNIvv4EgwlLMJzhNAtnjxh2n" data-form-email="true">
+                    <input type="hidden" value="oIfYOyXT1BIseLIMDZd5ReAWpNPL/q1pdmsGyTmvDZNCysfSSG57zEypdyVWyCJ76azKVe57TEkfGErXLdwonz+N6gu3c5ZzLmJktfyRGkBffcizbnQPC21NItQOMCxK" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
